--- a/bookstore-client/package.json
+++ b/bookstore-client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "redux-persist": "^6.0.0",
     "typescript": "^5.6.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
