--- a/bookstore-client/package.json
+++ b/bookstore-client/package.json
@@ -21,7 +21,6 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
-    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -50,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-toastify": "^4.0.2"
+    "@types/lodash": "^4.17.13",
+    "@types/react-toastify": "^4.0.2",
+    "typescript": "^4.9.5"
   }
 }
